--- a/web/WEB-INF/pages/header.html
+++ b/web/WEB-INF/pages/header.html
@@ -2,5 +2,6 @@
 <a href="/create-souvenir">Add new souvenir</a> |
 <a href="/souvenir-list">Show all souvenir</a> |
 <a href="/create-manufactory">Add new manufactory</a> |
-<a href="/manufactory-list">Show all manufactory</a>
+<a href="/manufactory-list">Show all manufactory</a> |
+<a href="/save-file">Save data on file</a>
 <br>
