search(begin), save file(begin)

--- a/web/WEB-INF/pages/header.html
+++ b/web/WEB-INF/pages/header.html
@@ -3,5 +3,6 @@
 <a href="/souvenir-list">Show all souvenir</a> |
 <a href="/create-manufactory">Add new manufactory</a> |
 <a href="/manufactory-list">Show all manufactory</a> |
+<a href="/search-page">Search manufactory</a> |
 <a href="/save-file">Save data on file</a>
 <br>
